# BenchGoblins

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  TODO.md  TODO_DEPLOYMENT.md  TODO_REVENUECAT_STRIPE.md  docker-compose.yml  fly.toml  pytest.ini  railway.toml  requirements-dev.txt  vercel.json
data/: schema.sql
src/api/: .env.example  Dockerfile  __init__.py  fly.toml  logging_config.py  main.py  monitoring.py  pyproject.toml  railway.toml  requirements.txt
src/api/jobs/: __init__.py  record_outcomes.py
src/api/models/: __init__.py  database.py  schemas.py
src/api/routes/: __init__.py  auth.py  billing.py  commissioner.py  decisions.py  dossier.py  goblin.py  integrations.py  leaderboard.py  leagues.py  newsletter.py  notifications.py  referral.py  rivalries.py  sessions.py  verdicts.py
src/api/services/: __init__.py  accuracy.py  auth.py  budget_alerts.py  claude.py  commissioner_alerts.py  database.py  draft_assistant.py  drip_scheduler.py  email.py  email_drip.py  engagement.py  espn.py  espn_fantasy.py  goblin_verdict.py  notification_triggers.py  notifications.py  outcome_recorder.py  outcome_scheduler.py  query_classifier.py  rankings_scheduler.py  rate_limiter.py  recap_scheduler.py  redis.py  reference.py  referral.py  rivalry.py  roster.py  router.py  scoring_adapter.py  session.py  sleeper.py  stats_enricher.py  stripe_billing.py  trade_analyzer.py  variants.py  verdict_scheduler.py  waiver_wire.py  websocket.py  weekly_recap.py  (+1 more)
(+279 files in other folders)
